# rsl

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  release-plz.toml
bitsandbytes/: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  deny.toml  release-plz.toml
bitsandbytes/.cargo/: config.toml
bitsandbytes/.config/: commitlint.config.mjs
bitsandbytes/.github/: CONTRIBUTING.md  SECURITY.md
bitsandbytes/.github/workflows/: ci.yml  commitlint.yml  docs.yml  release-plz.yml
bitsandbytes/bits/: ACKNOWLEDGMENTS.md  AGENTS.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md
bitsandbytes/bits-macros/: Cargo.toml
bitsandbytes/bits-macros/src/: bitenum.rs  bitfield.rs  bitflags.rs  bitstream.rs  builder.rs  lib.rs  wire.rs
bitsandbytes/bits/benches/: bitfield_bench.rs  bitstream_bench.rs
bitsandbytes/bits/examples/: enums.rs  ipv4_header.rs  protocol_header.rs  standalone.rs  tcp_segment.rs  wire_header.rs
bitsandbytes/bits/src/: bitstream.rs  builder.rs  error.rs  field.rs  int.rs  lib.rs  types.rs
bitsandbytes/bits/src/design_preview/: attributes.rs  io_model.rs  mod.rs
bitsandbytes/bits/src/macros/: mod.rs
bitsandbytes/bits/tests/: bin_buf_source.rs  bin_byte_order.rs  bin_bytes.rs  bin_calc_temp.rs  bin_count.rs  bin_ctx.rs  bin_ctx_layer2.rs  bin_fold.rs  bin_if.rs  bin_ignore.rs  bin_macro.rs  bin_magic.rs  bin_map.rs  bin_parse_with.rs  bin_positioning.rs  bin_reserved.rs  bin_restore_position.rs  bin_seek_reader.rs  bin_validate.rs  binrw_integration.rs  bitstream_bitorder.rs  bitstream_builder.rs  bitstream_dmr.rs  bitstream_dmr_frame.rs  bitstream_entry.rs  bitstream_errors.rs  bitstream_guard.rs  bitstream_nested.rs  bitstream_payload.rs  bitstream_seek.rs  bitstream_source.rs  bitwire_dispatch.rs  builder.rs  comprehensive.rs  flags.rs  protocol_shapes.rs  wide_field_placement.rs  wire.rs  wire_golden.rs  wire_proptest.proptest-regressions  (+2 more)
bitsandbytes/bnb/: ACKNOWLEDGMENTS.md  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md  ROADMAP.md  note.md  public-api.txt
bitsandbytes/bnb-macros/: CHANGELOG.md  Cargo.toml
bitsandbytes/bnb-macros/src/: bitenum.rs  bitfield.rs  bitflags.rs  bitstream.rs  builder.rs  lib.rs  wire.rs
bitsandbytes/bnb/benches/: bitfield_bench.rs  bitstream_bench.rs  message_bench.rs
bitsandbytes/bnb/examples/: README.md  ais.rs  alignment.rs  arbitrary_width.rs  archive.rs  bin_message.rs  bitbuf.rs  bitbuf_bounded.rs  bitfield_bytes.rs  bufsource.rs  bytes_frame.rs  can_signals.rs  checked.rs  conditional.rs  cstring.rs  ctx.rs  ctx_length.rs  dns.rs  endianness.rs  enums.rs  flags.rs  framed.rs  heartbeat.rs  ipv4.rs  ipv4_header.rs  mock_datagram.rs  mock_stream.rs  padding.rs  peek.rs  protocol_header.rs  register.rs  reserved.rs  sockets.rs  standalone.rs  streaming.rs  tcp.rs  tcp_segment.rs  telemetry.rs  tlv.rs  tokio_framed.rs  (+11 more)
bitsandbytes/bnb/nostd-check/: Cargo.toml
bitsandbytes/bnb/src/: bitstream.rs  builder.rs  codec.rs  codecs.rs  error.rs  field.rs  framing.rs  int.rs  lib.rs  net.rs  wirelen.rs
bitsandbytes/bnb/tests/: bin_assert.rs  bin_buf_source.rs  bin_byte_order.rs  bin_bytes.rs  bin_calc_temp.rs  bin_canonical.rs  bin_codec_newtype.rs  bin_count.rs  bin_count_adversarial.rs  bin_count_prefix.rs  bin_ctx.rs  bin_ctx_docs.rs  bin_ctx_layer2.rs  bin_enum.rs  bin_fold.rs  bin_if.rs  bin_ignore.rs  bin_io_adapter.rs  bin_lsb_dbc.rs  bin_macro.rs  bin_magic.rs  bin_map.rs  bin_net_addr.rs  bin_order_matrix.rs  bin_parse_with.rs  bin_phase2.rs  bin_positioning.rs  bin_reserved.rs  bin_restore_position.rs  bin_scratch.rs  bin_seek.rs  bin_seek_reader.rs  bin_try_str.rs  bin_validate.rs  bin_wire_len.rs  bin_wire_map.rs  binrw_integration.rs  bitbuf.rs  bitfield_byte_order.rs  bitfield_debug.rs  (+31 more)
bitsandbytes/docs/: RELEASING.md
bitsandbytes/fuzz/: Cargo.toml  README.md
bitsandbytes/fuzz/fuzz_targets/: decode.rs
demos/: Cargo.toml
demos/examples/: forge_arp.rs  spoof_udp.rs
demos/src/: lib.rs
protocols/: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md  VERSIONING.md  deny.toml  release-plz.toml  rust-toolchain.toml
protocols/.github/: CONTRIBUTING.md  SECURITY.md
protocols/.github/workflows/: ci.yml
protocols/application/dns/: AGENTS.md  CHANGELOG.md  Cargo.toml
protocols/link/arp/: AGENTS.md  CHANGELOG.md  Cargo.toml
protocols/link/ethernet/: AGENTS.md  CHANGELOG.md  Cargo.toml
protocols/link/ethertype/: AGENTS.md  CHANGELOG.md  Cargo.toml
protocols/network/icmp/: AGENTS.md  CHANGELOG.md  Cargo.toml
protocols/network/ip/: AGENTS.md  CHANGELOG.md  Cargo.toml
protocols/transport/tcp/: AGENTS.md  CHANGELOG.md  Cargo.toml
protocols/transport/udp/: AGENTS.md  CHANGELOG.md  Cargo.toml
rawsock/: AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md  release-plz.toml
rawsock/.config/: deny.toml
rawsock/.github/workflows/: ci.yml  release-plz.yml
rawsock/examples/: loopback_inject.rs
rawsock/src/: capability.rs  compose.rs  lib.rs  loopback.rs
rawsock/src/linux/: link.rs  mod.rs  network.rs  transport.rs
rawsock/tests/: compose.rs  core.rs  link.rs  network.rs  transport.rs
rfus/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
rfus/src/: constants.rs  error.rs  lib.rs  parser.rs  serde_impl.rs  tests.rs  types.rs  validation.rs
rsl/: AGENTS.md  Cargo.toml  README.md  deny.toml  rustfmt.toml
rsl-deps/: AGENTS.md  BLESSED.md  Cargo.toml  README.md  blessed-versions.toml  deny.toml
rsl-deps/.github/workflows/: ci.yml
rsl-deps/src/: lib.rs
rsl/.github/workflows/: ci.yml
rsl/src/: lib.rs
rsl/tests/: namespaces.rs
rust-dsdcc/: Cargo.toml  README.md  build.rs
rust-dsdcc/src/: lib.rs  rust_dsdcc.cpp  rust_dsdcc.h
tools/rust-skills/: .gitignore  AGENTS.md  Cargo.toml  README.md
tools/rust-skills/docs/: adoption.md  architecture-proposal.md  authoring-conventions.md  evaluation-guide.md  preference-record.md  research-report.md  source-ledger.md
tools/rust-skills/templates/: AGENTS.nested.md  AGENTS.root.md  rsl-rust-standards.toml
(+287 files in other folders)
