[workspace]
resolver = "2"
members = [
    # link layer
    "link/ethertype",
    "link/ethernet",
    # transport layer
    "transport/tcp",
    "transport/udp",
    # network layer
    "network/ip",
    "network/icmp",
    # application layer
    "application/dns",
    # network / transport / session / application layers land here as each
    # protocol is (re)written on `bnb` — see the crate status table in AGENTS.md.
]

# Shared package metadata — members inherit with `field.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RawSocketLabs/protocols"
rust-version = "1.85"

# Single source of truth for dependency versions — members use `dep.workspace = true`
# (and may add per-crate features / `default-features = false`). One version per crate
# here keeps the workspace from drifting (enforced by deny.toml's `multiple-versions`).
[workspace.dependencies]
# The codec. `bnb` (published as `bitsandbytes`) is the owned, bit-aware binary codec —
# integer-backed bitfields / arbitrary-width ints / enums / flag-sets plus the unified
# `#[bin]` whole-message codec. It replaces the whole `binrw` + `bitbybit` +
# `modular-bitfield` + `num_enum` + `arbitrary-int` stack the predecessor workspace used.
#
# Consumed from git during co-evolution: the DNS port drives bnb feature work, so both
# move together until bnb cuts a 1.0 crates.io release — then this becomes a version req.
# Pin to a `rev = "…"` once churn settles so protocols CI can't be broken by bnb's main.
bnb = { package = "bitsandbytes", git = "https://github.com/RawSocketLabs/bitsandbytes", branch = "main" }

# Raw-packet I/O + the layered composition model (Protocol trait, pseudo-header checksum).
# Consumed from git during co-evolution, like bnb; `default-features = false` pulls only the
# `compose` trait + `Loopback` (no `rustix` socket code). Pin to a rev once churn settles.
rawsock = { git = "https://github.com/RawSocketLabs/rawsock", branch = "main", default-features = false }

# error / logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# serde (opt-in per crate; wire codecs are bnb, serde is for config/logs)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# builders (orthogonal to the codec; bnb also generates one, but derive_builder stays
# available for plain non-`#[bin]` types)
derive_builder = "0.20"

# rng / hashing / framing / addressing
rand = "0.9"
sha2 = "0.10"
crc32fast = "1.3"
bytes = "1"
macaddr = "1.0"
socket2 = "0.5"

# dev / bench
criterion = "0.5"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"
missing_docs = "warn"          # polished crates upgrade to deny themselves

[workspace.lints.clippy]
# Groups get lower priority so the individual allows below override them
# (clippy::lint_groups_priority).
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_inception = "allow"     # files named after their single module (e.g. arp/src/arp.rs)
upper_case_acronyms = "allow"  # protocol acronyms (ARP, TCP, OpCode, …)
# Libraries should log via `tracing`, not print. `warn` (advisory) for now —
# examples/binaries that legitimately print can `#[allow]` locally.
print_stdout = "warn"
print_stderr = "warn"
