[package]
name = "rsl-deps"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RawSocketLabs/rsl-deps"
description = "The RSL blessed external-dependency stack: one feature-gated crate that pins and re-exports the third-party crates RawSocket Labs libraries and apps build on."
readme = "README.md"
# Git dependency for now; intended to move to a registry (crates.io / private) later so that
# published RSL libraries can depend on it too. It has NO git deps of its own — only registry
# version pins — so it is already publishable once the registry decision is made.
publish = false

# ---------------------------------------------------------------------------
# SINGLE SOURCE OF TRUTH for blessed third-party versions. Every dependency is `optional`;
# `rsl-deps` compiles to nothing until a consumer enables a feature. Bump a version in ONE
# place and every RSL crate that consumes `rsl-deps` moves together.
#
# This crate is the "rented" half of the stack: everything here is a candidate for eventual
# replacement by an owned RSL crate (which lives in `rsl`). When that happens, the pin is
# deleted here and the owned crate is added to `rsl`.
# ---------------------------------------------------------------------------
[dependencies]
thiserror          = { version = "1.0", optional = true }
anyhow             = { version = "1.0", optional = true }
tracing            = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"], optional = true }
tracing-appender   = { version = "0.2", optional = true }
serde              = { version = "1.0", features = ["derive"], optional = true }
serde_json         = { version = "1.0", optional = true }
bytes              = { version = "1", optional = true }
clap               = { version = "4", features = ["derive"], optional = true }
rand               = { version = "0.9", optional = true }
sha2               = { version = "0.10", optional = true }
crc32fast          = { version = "1.3", optional = true }
macaddr            = { version = "1.0", optional = true }
socket2            = { version = "0.6", optional = true }
winnow             = { version = "0.7", optional = true }
num-complex        = { version = "0.4.6", optional = true }
hound              = { version = "3.5.1", optional = true }
rustfft            = { version = "6.4", optional = true }

# async runtime & messaging
tokio              = { version = "1.50", features = ["full"], optional = true }
futures-util       = { version = "0.3", optional = true }
async-nats         = { version = "0.49", optional = true }

# data parallelism
rayon              = { version = "1.11", optional = true }

# http server / client, OpenAPI
axum               = { version = "0.8", optional = true }
tower              = { version = "0.5", features = ["util"], optional = true }
tower-http         = { version = "0.6", features = ["trace"], optional = true }
utoipa             = { version = "5", features = ["axum_extras"], optional = true }
utoipa-swagger-ui  = { version = "9", features = ["axum", "vendored"], optional = true }
reqwest            = { version = "0.13", default-features = false, features = ["json"], optional = true }

# terminal UI
ratatui            = { version = "0.30", optional = true }
color-eyre         = { version = "0.6", optional = true }

# time & protobuf
chrono             = { version = "0.4", optional = true }
prost              = { version = "0.14", optional = true }

[features]
default = []

# ---- convenience bundles --------------------------------------------------
# The common std application-layer deps.
std-ext = ["error", "log", "serde"]
# Async network-service deps for daemons and API services.
service = ["async", "nats", "parallel", "std-ext", "bytes"]
# HTTP API service deps (axum + OpenAPI).
web = ["web-server", "openapi"]
# Everything.
full = [
    "std-ext", "service", "web", "bytes", "cli", "rand", "hash", "netutil", "parse",
    "num", "audio", "fft", "http", "tui", "time", "protobuf",
]

# ---- capability features --------------------------------------------------
error    = ["dep:thiserror", "dep:anyhow"]
log      = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-appender"]
serde    = ["dep:serde", "dep:serde_json"]
bytes    = ["dep:bytes"]
cli      = ["dep:clap"]
rand     = ["dep:rand"]
hash     = ["dep:sha2", "dep:crc32fast"]
netutil  = ["dep:macaddr", "dep:socket2"]
parse    = ["dep:winnow"]
num      = ["dep:num-complex"]
audio    = ["dep:hound"]
fft      = ["dep:rustfft"]

async      = ["dep:tokio", "dep:futures-util"]
nats       = ["dep:async-nats"]
parallel   = ["dep:rayon"]
web-server = ["dep:axum", "dep:tower", "dep:tower-http"]
openapi    = ["dep:utoipa", "dep:utoipa-swagger-ui"]
http       = ["dep:reqwest"]

tui      = ["dep:ratatui", "dep:color-eyre"]
time     = ["dep:chrono"]
protobuf = ["dep:prost"]

[lints.rust]
unreachable_pub = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
