[package]
name = "rsl"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RawSocketLabs/rsl"
description = "The RSL stack: a single, feature-gated facade over the blessed internal and external crates that RawSocket Labs application crates build on."
readme = "README.md"
# Not published to a registry: it depends on the owned crates by `git`, which crates.io
# forbids in a published package. Consumed directly as a git/path dependency by RSL
# application crates. Private owned crates (e.g. libsdr) are deliberately NOT here — they
# belong in a private overlay crate that depends on `rsl` and adds them.
publish = false

# ---------------------------------------------------------------------------
# Blessed dependency stack — SINGLE SOURCE OF TRUTH for versions.
#
# Every dependency is `optional`, so `rsl` compiles to nothing until a consumer
# opts into a feature. Versions here are the ecosystem-wide blessed pins; bump
# them in ONE place and every application crate that consumes `rsl` moves together.
#
# Owned RSL crates are `git` deps to their public RawSocketLabs repos, PINNED to an exact
# `rev` for reproducibility — a push to a sibling's `main` cannot silently change or break
# `rsl` (or any consumer). Bump a pin deliberately (re-run `git ls-remote` and update the
# rev here). Sourcing is an implementation detail — the public `rsl::…` paths consumers
# import do not change when a pin moves.
# ---------------------------------------------------------------------------
[dependencies]

# ===== internal: owned RSL crates (public repos) ===========================
# The codec everything binary-on-the-wire is built on (published as `bitsandbytes`,
# imported as `bnb`). Same git source the protocol crates use, so the tree unifies on
# one codec with no `[patch]` needed.
bnb = { package = "bitsandbytes", git = "https://github.com/RawSocketLabs/bitsandbytes", rev = "09cdc912d6913c35f1a49dd89c8db9993d18f00f", optional = true }

# Protocol implementations (members of the `protocols` workspace, selected by `package`).
ethertype = { git = "https://github.com/RawSocketLabs/protocols", rev = "b87d9ba05ceabd1f17dc8726896d0b843af3bd69", optional = true }
tcp       = { git = "https://github.com/RawSocketLabs/protocols", rev = "b87d9ba05ceabd1f17dc8726896d0b843af3bd69", optional = true }
udp       = { git = "https://github.com/RawSocketLabs/protocols", rev = "b87d9ba05ceabd1f17dc8726896d0b843af3bd69", optional = true }
dns       = { git = "https://github.com/RawSocketLabs/protocols", rev = "b87d9ba05ceabd1f17dc8726896d0b843af3bd69", optional = true }

# Layered raw-packet I/O (L2/L3/L4).
rawsock = { git = "https://github.com/RawSocketLabs/rawsock", rev = "055ec277d44f46af19efb78c83098d81216b8dbc", optional = true }

# RF frequency / sample-rate / scan-target parsing.
rfus = { git = "https://github.com/RawSocketLabs/rfus", rev = "9a98224a7f9da4a33758cd496805cb9952f442c7", optional = true }

# USDR software-defined-radio bindings (FFI; needs a C++ toolchain + system libs to build,
# so opt-in only and off by default).
usdr = { git = "https://github.com/RawSocketLabs/usdr-lib-rs", rev = "4f016843bed292eeb0d8f96732350ab994a1883f", optional = true }

# NOTE — owned crates intentionally absent from this PUBLIC facade:
#   * rust-dsdcc, libsdr (`sdr`) — private repos; bless them in the private overlay crate.

# ===== external: blessed third-party crates ================================
# Grouped by capability; re-exported under `rsl::ext::*`. When RSL replaces one of
# these with an owned crate, it graduates out of `ext` into a semantic namespace and
# the pin is deleted here.
thiserror          = { version = "1.0", optional = true }
anyhow             = { version = "1.0", optional = true }
tracing            = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"], optional = true }
tracing-appender   = { version = "0.2", optional = true }
serde              = { version = "1.0", features = ["derive"], optional = true }
serde_json         = { version = "1.0", optional = true }
bytes              = { version = "1", optional = true }
clap               = { version = "4", features = ["derive"], optional = true }
rand               = { version = "0.9", optional = true }
sha2               = { version = "0.10", optional = true }
crc32fast          = { version = "1.3", optional = true }
macaddr            = { version = "1.0", optional = true }
socket2            = { version = "0.5", optional = true }
winnow             = { version = "0.7", optional = true }
num-complex        = { version = "0.4.6", optional = true }
hound              = { version = "3.5.1", optional = true }
rustfft            = { version = "6.4", optional = true }

# async runtime & messaging
tokio              = { version = "1.50", features = ["full"], optional = true }
futures-util       = { version = "0.3", optional = true }
async-nats         = { version = "0.49", optional = true }

# data parallelism
rayon              = { version = "1.11", optional = true }

# http server / client, OpenAPI
axum               = { version = "0.8", optional = true }
tower              = { version = "0.5", features = ["util"], optional = true }
tower-http         = { version = "0.6", features = ["trace"], optional = true }
utoipa             = { version = "5", features = ["axum_extras"], optional = true }
utoipa-swagger-ui  = { version = "9", features = ["axum", "vendored"], optional = true }
reqwest            = { version = "0.13", default-features = false, features = ["json"], optional = true }

# terminal UI
ratatui            = { version = "0.30", optional = true }
color-eyre         = { version = "0.6", optional = true }

# time & protobuf
chrono             = { version = "0.4", optional = true }
prost              = { version = "0.14", optional = true }

[features]
default = []

# ---- convenience bundles --------------------------------------------------
# Pull a coherent slice of the stack in one feature.
full  = ["net", "radio", "service", "std-ext"]
# Everything needed to build/parse/emit network traffic.
net   = ["codec", "proto", "rawsock", "bytes", "error", "log", "netutil"]
# SDR / DSP: RF parsing (rfus) + complex math / FFT / WAV externals. Add `usdr`
# explicitly for the FFI SDR bindings (needs a C++ toolchain).
radio = ["rf", "num", "audio", "fft"]
# Async network-service stack for daemons and API services.
service = ["async", "nats", "parallel", "std-ext", "bytes"]
# HTTP API service (axum + OpenAPI).
web = ["web-server", "openapi"]
# The common std application-layer externals.
std-ext = ["error", "log", "serde"]

# ---- internal RSL crates (owned) ------------------------------------------
codec = ["dep:bnb"]

proto           = ["proto-ethertype", "proto-tcp", "proto-udp", "proto-dns"]
proto-ethertype = ["dep:ethertype", "codec"]
proto-tcp       = ["dep:tcp", "codec"]
proto-udp       = ["dep:udp", "codec"]
proto-dns       = ["dep:dns", "codec"]

rawsock = ["dep:rawsock"]
rf      = ["dep:rfus"]

# FFI-backed (needs a C++ toolchain + system libraries present to build).
usdr = ["dep:usdr"]

# ---- blessed external crates ----------------------------------------------
error    = ["dep:thiserror", "dep:anyhow"]
log      = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-appender"]
serde    = ["dep:serde", "dep:serde_json"]
bytes    = ["dep:bytes"]
cli      = ["dep:clap"]
rand     = ["dep:rand"]
hash     = ["dep:sha2", "dep:crc32fast"]
netutil  = ["dep:macaddr", "dep:socket2"]
parse    = ["dep:winnow"]
num      = ["dep:num-complex"]
audio    = ["dep:hound"]
fft      = ["dep:rustfft"]

# async / services
async      = ["dep:tokio", "dep:futures-util"]
nats       = ["dep:async-nats"]
parallel   = ["dep:rayon"]
web-server = ["dep:axum", "dep:tower", "dep:tower-http"]
openapi    = ["dep:utoipa", "dep:utoipa-swagger-ui"]
http       = ["dep:reqwest"]

# terminal UI / time / protobuf
tui      = ["dep:ratatui", "dep:color-eyre"]
time     = ["dep:chrono"]
protobuf = ["dep:prost"]

[lints.rust]
unreachable_pub = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
