[package]
name = "rsl"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RawSocketLabs/rsl"
description = "The RSL owned-library facade: a single, feature-gated re-export of the public libraries RawSocket Labs authors (codec, protocols, rawsock, rf, usdr)."
readme = "README.md"
# Not published to a registry: it depends on the owned crates by `git`, which crates.io
# forbids in a published package. Consumed directly as a git dependency by RSL application
# crates. Blessed THIRD-PARTY crates live in the separate `rsl-deps` crate; private owned
# crates live in the private `rsl-private` overlay.
publish = false

# ---------------------------------------------------------------------------
# The libraries RSL OWNS, re-exported under semantic paths. This is the "owned" half of the
# stack; the "rented" third-party half is `rsl-deps`. The two are orthogonal — a crate that
# needs both depends on both.
#
# Every dependency is `optional`, so `rsl` compiles to nothing until a consumer opts into a
# feature. Owned crates are `git` deps to their public RawSocketLabs repos, PINNED to an exact
# `rev` for reproducibility — a push to a sibling's `main` cannot silently change or break
# `rsl` (or any consumer). Bump a pin deliberately (`git ls-remote` → update the rev here).
# ---------------------------------------------------------------------------
[dependencies]

# ===== owned RSL crates (public repos) =====================================
# The codec everything binary-on-the-wire is built on (published as `bitsandbytes`,
# imported as `bnb`). Same git source the protocol crates use, so the tree unifies on
# one codec with no `[patch]` needed.
bnb = { package = "bitsandbytes", git = "https://github.com/RawSocketLabs/bitsandbytes", rev = "c39b19d77af9390192256279bdc9d40d29676312", optional = true }

# Protocol implementations (members of the `protocols` workspace, selected by `package`).
ethertype = { git = "https://github.com/RawSocketLabs/protocols", rev = "1d2708079858159dd9682813d4115f79fe9cb485", optional = true }
tcp       = { git = "https://github.com/RawSocketLabs/protocols", rev = "1d2708079858159dd9682813d4115f79fe9cb485", optional = true }
udp       = { git = "https://github.com/RawSocketLabs/protocols", rev = "1d2708079858159dd9682813d4115f79fe9cb485", optional = true }
dns       = { git = "https://github.com/RawSocketLabs/protocols", rev = "1d2708079858159dd9682813d4115f79fe9cb485", optional = true }

# Layered raw-packet I/O (L2/L3/L4).
rawsock = { git = "https://github.com/RawSocketLabs/rawsock", rev = "055ec277d44f46af19efb78c83098d81216b8dbc", optional = true }

# RF frequency / sample-rate / scan-target parsing.
rfus = { git = "https://github.com/RawSocketLabs/rfus", rev = "9a98224a7f9da4a33758cd496805cb9952f442c7", optional = true }

# USDR software-defined-radio bindings (FFI; needs a C++ toolchain + system libs to build,
# so opt-in only and off by default).
usdr = { git = "https://github.com/RawSocketLabs/usdr-lib-rs", rev = "4592a4c229ad9e0ac50c144bf9d6f56ccfe61501", optional = true }

# NOTE — owned crates intentionally absent from this PUBLIC facade:
#   * rust-dsdcc, libsdr (`sdr`) — private repos; bless them in the private `rsl-private` overlay.

[features]
default = []

# ---- convenience bundles (owned libraries) --------------------------------
# All the owned public libraries (excludes the FFI `usdr` — add it explicitly).
full = ["net", "radio"]
# Build/parse/emit network traffic.
net  = ["codec", "proto", "rawsock"]
# RF parsing. (Add `usdr` explicitly for the FFI SDR bindings — needs a C++ toolchain.)
radio = ["rf"]

# ---- owned RSL crates -----------------------------------------------------
codec = ["dep:bnb"]

proto           = ["proto-ethertype", "proto-tcp", "proto-udp", "proto-dns"]
proto-ethertype = ["dep:ethertype", "codec"]
proto-tcp       = ["dep:tcp", "codec"]
proto-udp       = ["dep:udp", "codec"]
proto-dns       = ["dep:dns", "codec"]

rawsock = ["dep:rawsock"]
rf      = ["dep:rfus"]

# FFI-backed (needs a C++ toolchain + system libraries present to build).
usdr = ["dep:usdr"]

[lints.rust]
unreachable_pub = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
