[package]
name = "rsl"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RawSocketLabs/rsl"
description = "The RSL owned-library facade: a single, feature-gated re-export of the public libraries RawSocket Labs authors (codec, protocols, rawsock, rf, usdr)."
readme = "README.md"
# Not published to a registry: it depends on the owned crates by `git`, which crates.io
# forbids in a published package. Consumed directly as a git dependency by RSL application
# crates. Blessed THIRD-PARTY crates live in the separate `rsl-deps` crate; private owned
# crates live in the private `rsl-private` overlay.
publish = false

# ---------------------------------------------------------------------------
# The libraries RSL OWNS, re-exported under semantic paths. This is the "owned" half of the
# stack; the "rented" third-party half is `rsl-deps`. The two are orthogonal — a crate that
# needs both depends on both.
#
# Every dependency is `optional`, so `rsl` compiles to nothing until a consumer opts into a
# feature. Owned crates are `git` deps to their public RawSocketLabs repos, PINNED to an exact
# `rev` for reproducibility — a push to a sibling's `main` cannot silently change or break
# `rsl` (or any consumer). Bump a pin deliberately (`git ls-remote` → update the rev here).
# ---------------------------------------------------------------------------
[dependencies]

# ===== owned RSL crates (in-workspace path deps) ===========================
# All owned crates now live in this monorepo, so the facade uses `path` deps (with a `version`
# for published consumers). No more git revs to pin — the workspace keeps everything in lockstep.
# The codec (published as `bitsandbytes`, imported as `bnb`) and rawsock come from the shared
# `[workspace.dependencies]`; the rest are direct path deps.
bnb = { workspace = true, optional = true }

# Protocol implementations.
ethertype = { path = "../protocols/link/ethertype", version = "0.2.1", optional = true }
tcp       = { path = "../protocols/transport/tcp", version = "0.1.0", optional = true }
udp       = { path = "../protocols/transport/udp", version = "0.1.3", optional = true }
dns       = { path = "../protocols/application/dns", version = "0.1.0", optional = true }

# Layered raw-packet I/O (L2/L3/L4).
rawsock = { workspace = true, optional = true }

# RF frequency / sample-rate / scan-target parsing.
rfus = { path = "../rfus", version = "0.1.0", optional = true }

# FFI bindings (need a C++ toolchain + system libs to build; opt-in only, off by default).
usdr = { path = "../usdr", version = "0.1.0", optional = true }
"rust-dsdcc" = { path = "../rust-dsdcc", version = "0.1.0", optional = true }

# NOTE — the private owned crate `libsdr` (`sdr`) is absent by design; it lives in the private
# `rsl-private` overlay.

[features]
default = []

# ---- convenience bundles (owned libraries) --------------------------------
# All the owned public libraries (excludes the FFI `usdr` — add it explicitly).
full = ["net", "radio"]
# Build/parse/emit network traffic.
net  = ["codec", "proto", "rawsock"]
# RF parsing. (Add `usdr` explicitly for the FFI SDR bindings — needs a C++ toolchain.)
radio = ["rf"]

# ---- owned RSL crates -----------------------------------------------------
codec = ["dep:bnb"]

proto           = ["proto-ethertype", "proto-tcp", "proto-udp", "proto-dns"]
proto-ethertype = ["dep:ethertype", "codec"]
proto-tcp       = ["dep:tcp", "codec"]
proto-udp       = ["dep:udp", "codec"]
proto-dns       = ["dep:dns", "codec"]

rawsock = ["dep:rawsock"]
rf      = ["dep:rfus"]

# FFI-backed (needs a C++ toolchain + system libraries present to build).
usdr = ["dep:usdr"]
dsdcc = ["dep:rust-dsdcc"]

[lints.rust]
unreachable_pub = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
