[package]
name = "rust-dsdcc"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RawSocketLabs/rsl"
description = "Rust bindings to the DSDcc digital-voice decoder library (cxx/FFI)."
readme = "README.md"

[dependencies]
cxx = "1.0.161"

[build-dependencies]
cxx-build = "1.0.161"
